apps/proxmox-hosts/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${HOST_NAME}
  namespace: ${HOST_NAME}
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 8006
      targetPort: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ${HOST_NAME}
  namespace: ${HOST_NAME}
subsets:
  - addresses:
      - ip: ${HOST_IP}
    ports:
      - name: https
        port: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: ${HOST_NAME}-ssh
  namespace: ${HOST_NAME}
spec:
  type: ClusterIP
  ports:
    - name: ssh
      port: 22
      targetPort: 22
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ${HOST_NAME}-ssh
  namespace: ${HOST_NAME}
subsets:
  - addresses:
      - ip: ${HOST_IP}
    ports:
      - name: ssh
        port: 22
