apps/proxmox-hosts/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${HOST_NAME}
  namespace: ${HOST_NAME}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${HOST_NAME}.local.ruizops.com`)
      kind: Rule
      priority: 100
      services:
        - name: ${HOST_NAME}
          namespace: ${HOST_NAME}
          port: 8006
          serversTransport: ${HOST_NAME}-transport
          scheme: https
  tls:
    secretName: ${HOST_NAME}-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ${HOST_NAME}-ssh
  namespace: ${HOST_NAME}
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: ${HOST_NAME}-ssh
          port: 22
